[ARREGLADO] principal.html
Nuevo commit.

--- a/principal.html
+++ b/principal.html
@@ -46,7 +46,7 @@ asi me lo tiene que tirar-->
           <a class="nav-link" onclick="pausa1()"> Pausa </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="practice.html">Cerrar Sesión</a>
+          <a class="nav-link" href="index.html">Cerrar Sesión</a>
         </li>
       </ul>
     </div>
